# minimal_vcpkg_example

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
ports/vulkan-headers/: portfile.cmake  vcpkg.json
